--- a/styles.scss
+++ b/styles.scss
@@ -1,9 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Chivo:wght@400;700&display=swap");
+html {
+    
+    ::-webkit-scrollbar {
+      width: 0;  /* Remove scrollbar space */
+      background: transparent;  /* Optional: just make scrollbar invisible */
+    }
+  }
+
+
 body {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
   font-family: "Chivo", sans-serif;
+  
 }
 
 * {
@@ -259,26 +269,6 @@ header {
   }
 }
 
-#new-opportunities {
-  margin-top: 200px;
-  text-align: center;
-
-  .about {
-    padding: 0 450px;
-    line-height: 1.5rem;
-
-    @media (max-width: 480px) {
-      padding: 0 0;
-      margin-right: 22px;
-    }
-  }
-
-  @media (max-width: 480px) {
-    text-align: left;
-    margin-top: 50px;
-    margin-left: 22px;
-  }
-}
 .plantain {
   position: absolute;
   top: 590px;
@@ -303,4 +293,64 @@ header {
     }
   }
 }
+
+#new-opportunities {
+  margin-top: 200px;
+  text-align: center;
+  font-size: 2rem;
+
+  .about {
+    line-height: 3rem;
+    max-width: 40%;
+    font-size: 1.6rem;
+    margin: 0 auto;
+
+    @media (max-width: 480px) {
+      margin-right: 22px;
+      max-width: 100%;
+    }
+  }
+
+  @media (max-width: 480px) {
+    text-align: left;
+    margin-top: 50px;
+    margin-left: 22px;
+  }
+}
+
+.benefit{
+  margin-top: 100px;
+
+.benefit-container{
+  display: flex;
+  justify-content: center;
+
+}
+
+.benefit-card{
+  color: #333;
+  height: auto;
+  width: fit-content;
+  max-width: 15%;
+  margin: 0 36px;
+  padding:30px ;
+  padding-bottom: 12px;
+
+  .title{
+    font-weight: bold;
+    font-size: 1.2rem;
+  }
+
+  .icon{
+    height: 80px;
+    display: flex; 
+      align-items: center;
+    justify-content: center;
+   }
+ 
+}
+}
+
+
+
 
