--- a/styles.css
+++ b/styles.css
@@ -462,6 +462,9 @@ header .main-illustration img {
   margin: 0 36px;
   padding: 30px;
   padding-bottom: 12px;
+  -webkit-box-shadow: -1px 13px 20px #f0f2f4;
+          box-shadow: -1px 13px 20px #f0f2f4;
+  border-radius: 5px;
 }
 
 .benefit .benefit-card .title {
@@ -480,5 +483,10 @@ header .main-illustration img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.benefit .benefit-card:nth-child(2) {
+  background-color: #66bb6a;
+  color: #f2f2f2;
 }
 /*# sourceMappingURL=styles.css.map */
