--- a/styles.scss
+++ b/styles.scss
@@ -321,6 +321,14 @@ header {
   .benefit-container {
     display: flex;
     justify-content: center;
+
+     @media (max-width: 768px) {
+   flex-direction: column;
+  }
+
+  @media (max-width: 480px) {
+    flex-direction: column;
+  }
   }
 
   .benefit-card {
@@ -350,5 +358,14 @@ header {
       background-color: #66bb6a;
       color: #f2f2f2;
     }
+
+         @media (max-width: 768px) {
+   max-width: 100%;
+   margin-bottom: 40px;
+  }
+
+  @media (max-width: 480px) {
+    flex-direction: column;
+  }
   }
 }
