--- a/styles.scss
+++ b/styles.scss
@@ -322,13 +322,13 @@ header {
     display: flex;
     justify-content: center;
 
-     @media (max-width: 768px) {
-   flex-direction: column;
-  }
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
 
-  @media (max-width: 480px) {
-    flex-direction: column;
-  }
+    @media (max-width: 480px) {
+      flex-direction: column;
+    }
   }
 
   .benefit-card {
@@ -345,6 +345,10 @@ header {
     .title {
       font-weight: bold;
       font-size: 1.2rem;
+
+    }
+    .body {
+      line-height: 1.5rem;
     }
 
     .icon {
@@ -359,13 +363,13 @@ header {
       color: #f2f2f2;
     }
 
-         @media (max-width: 768px) {
-   max-width: 100%;
-   margin-bottom: 40px;
-  }
+    @media (max-width: 768px) {
+      max-width: 100%;
+      margin-bottom: 40px;
+    }
 
-  @media (max-width: 480px) {
-    flex-direction: column;
-  }
+    @media (max-width: 480px) {
+      flex-direction: column;
+    }
   }
 }
