--- a/styles.scss
+++ b/styles.scss
@@ -345,7 +345,6 @@ header {
     .title {
       font-weight: bold;
       font-size: 1.2rem;
-
     }
     .body {
       line-height: 1.5rem;
@@ -372,4 +371,11 @@ header {
       flex-direction: column;
     }
   }
+}
+
+hr {
+  margin: 90px 100px;
+  @media (max-width: 480px) {
+      margin: 10px 70px;
+    }
 }
