--- a/styles.scss
+++ b/styles.scss
@@ -376,6 +376,25 @@ header {
 hr {
   margin: 90px 100px;
   @media (max-width: 480px) {
-      margin: 10px 70px;
-    }
+    margin: 10px 70px;
+  }
+}
+
+.invest {
+  margin-left: 110px;
+
+  h2 {
+    font-size:2.5rem;
+    font-weight: bold;
+    font-family: "Chivo", sans-serif;
+  }
+  p{
+    max-width: 800px;
+    line-height: 3rem;
+    font-size: 1.6rem;
+  }
+
+  @media (max-width: 480px) {
+    margin-left: 20px;
+  }
 }
