(FEAT): Added the terms section

--- a/styles.css
+++ b/styles.css
@@ -559,4 +559,14 @@ hr {
     margin-left: 20px;
   }
 }
+
+.terms {
+  background-color: red;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
 /*# sourceMappingURL=styles.css.map */
