--- a/styles.scss
+++ b/styles.scss
@@ -381,7 +381,7 @@ hr {
 }
 
 .invest {
-  margin-left: 110px;
+  margin-left: 192px;
 
   h2 {
     font-size: 2.5rem;
@@ -400,9 +400,68 @@ hr {
 }
 
 .terms {
-  background-color: red;
   display: flex;
-  justify-content: center;
+  color: white;
+  margin-left: 192px;
+  margin-top: 66px;
+
+  .term {
+    padding: 30px 60px;
+    margin-right: 40px;
+    width: 30%;
+    background-image:
+   linear-gradient(180deg, rgba(97, 118, 127, 0.0001) 0%, #324148 100%),
+    url("./images/short.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    &:last-child {
+      background-image: linear-gradient(180deg, rgba(97, 118, 127, 0.0001) 0%, #324148 100%),url("./images/long.png");
+      object-fit: contain;
+      background-position: center;
+    }
 
   
+    .perk {
+      color: #66bb6a;
+      font-size: 1.2rem;
+      text-transform: uppercase;
+      font-family: "Chivo", sans-serif;
+      letter-spacing: 3px;
+    }
+
+    .underline {
+      height: 5px;
+      width: 20%;
+      background-color: white;
+    }
+
+    h3 {
+      font-size: 2rem;
+      max-width: 50%;
+      line-height: 3rem;
+    }
+
+    .invest-message {
+      max-width: 60%;
+      font-size: 1.2rem;
+      color: #e2efd2;
+      line-height: 2rem;
+      margin-bottom: 40px;
+    }
+
+    button {
+      color: #66bb6a;
+      font-size: 1.2rem;
+      padding: 15px 30px;
+      border: none;
+      background-color: white;
+      border-radius: 5px;
+
+      &:focus {
+        outline: none;
+      }
+    }
+  }
 }
