(FEAT): Made the terms section responsice

--- a/styles.css
+++ b/styles.css
@@ -588,6 +588,14 @@ hr {
   background-position: center;
 }
 
+@media (max-width: 480px) {
+  .terms .term {
+    width: 95%;
+    margin-top: 50px;
+    margin-right: 20px;
+  }
+}
+
 .terms .term .perk {
   color: #66bb6a;
   font-size: 1.2rem;
@@ -616,6 +624,12 @@ hr {
   margin-bottom: 40px;
 }
 
+@media (max-width: 480px) {
+  .terms .term .invest-message {
+    max-width: 100%;
+  }
+}
+
 .terms .term button {
   color: #66bb6a;
   font-size: 1.2rem;
@@ -627,5 +641,16 @@ hr {
 
 .terms .term button:focus {
   outline: none;
+}
+
+@media (max-width: 480px) {
+  .terms {
+    margin-left: 20px;
+    margin-top: 0px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
