--- a/styles.scss
+++ b/styles.scss
@@ -409,20 +409,32 @@ hr {
     padding: 30px 60px;
     margin-right: 40px;
     width: 30%;
-    background-image:
-   linear-gradient(180deg, rgba(97, 118, 127, 0.0001) 0%, #324148 100%),
-    url("./images/short.png");
+    background-image: linear-gradient(
+        180deg,
+        rgba(97, 118, 127, 0.0001) 0%,
+        #324148 100%
+      ),
+      url("./images/short.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 
     &:last-child {
-      background-image: linear-gradient(180deg, rgba(97, 118, 127, 0.0001) 0%, #324148 100%),url("./images/long.png");
+      background-image: linear-gradient(
+          180deg,
+          rgba(97, 118, 127, 0.0001) 0%,
+          #324148 100%
+        ),
+        url("./images/long.png");
       object-fit: contain;
       background-position: center;
     }
+    @media (max-width: 480px) {
+      width: 95%;
+      margin-top: 50px;
+      margin-right: 20px;
+    }
 
-  
     .perk {
       color: #66bb6a;
       font-size: 1.2rem;
@@ -449,6 +461,9 @@ hr {
       color: #e2efd2;
       line-height: 2rem;
       margin-bottom: 40px;
+      @media (max-width: 480px) {
+        max-width: 100%;
+      }
     }
 
     button {
@@ -463,5 +478,12 @@ hr {
         outline: none;
       }
     }
+
+  }
+
+  @media (max-width: 480px) {
+    margin-left: 20px;
+    margin-top: 0px;
+    flex-direction: column;
   }
 }
