--- a/styles.css
+++ b/styles.css
@@ -653,4 +653,27 @@ hr {
             flex-direction: column;
   }
 }
+
+.boxx {
+  width: 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.boxx .black {
+  background-color: red;
+  border-radius: 50%;
+  padding: 30px;
+  font-size: 1.2rem;
+  border: 2px solid white;
+}
+
+.boxx hr {
+  width: 100%;
+  margin: 0;
+}
 /*# sourceMappingURL=styles.css.map */
