--- a/styles.scss
+++ b/styles.scss
@@ -478,12 +478,28 @@ hr {
         outline: none;
       }
     }
-
   }
 
   @media (max-width: 480px) {
     margin-left: 20px;
     margin-top: 0px;
     flex-direction: column;
+  }
+}
+
+.boxx {
+  width: 40%;
+  display: flex;
+  align-items: center;
+  .black {
+    background-color: red;
+    border-radius: 50%;
+    padding: 30px;
+    font-size: 1.2rem;
+    border: 2px solid white;
+  }
+  hr {
+    width: 100%;
+    margin: 0;
   }
 }
