--- a/styles.scss
+++ b/styles.scss
@@ -490,7 +490,9 @@ hr {
 .works {
   color: white;
   text-align: center;
-  background-color: red;
+  background-color: #66bb6a;
+  width: auto;
+  margin: 192px;
   padding-top: 106px;
 
   h1 {
@@ -498,7 +500,8 @@ hr {
   }
   .instruction {
     margin: 0 auto;
-    max-width: 30%;
+    max-width: 50%;
+    line-height: 2rem;
     font-size: 1.2rem;
     margin-bottom: 50px;
   }
@@ -512,7 +515,7 @@ hr {
       border-radius: 50%;
       padding: 30px;
       font-size: 1.2rem;
-      color: #ffffff;
+      color: #cacaca;
       border: 2px solid white;
 
       &:first-child{
@@ -530,17 +533,20 @@ hr {
   .bottom-text-row {
     display: flex;
     justify-content: center;
+    padding-bottom: 100px;
     h5 {
-      max-width: 9%;
+      max-width: 15%;
       text-align: left;
       font-size: 1.3rem;
-      margin-top: 25px;
+      line-height: 2rem;
+      margin-top: 50px;
     }
 
     p {
-      margin-top: 25px;
+      margin-top: 50px;
       text-align: left;
-      max-width: 20%;
+      max-width: 30%;
+      line-height: 1.5rem;
       font-size: 1.1rem;
       color: white;
       margin-left: 40px;
