--- a/styles.scss
+++ b/styles.scss
@@ -494,6 +494,16 @@ hr {
   width: auto;
   margin: 192px;
   padding-top: 106px;
+  @media (max-width: 480px) {
+    margin: 0;
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    align-items: center;
+    margin-top: 40px;
+    padding-top: 10px;
+  }
 
   h1 {
     font-size: 1.5rem;
@@ -504,42 +514,67 @@ hr {
     line-height: 2rem;
     font-size: 1.2rem;
     margin-bottom: 50px;
+    @media (max-width: 480px) {
+      margin: 0;
+      max-width: 70%;
+    }
   }
 
   .boxx {
-    width: 40%;
+    width: 70%;
     display: flex;
     margin: 0 auto;
     align-items: center;
-    .black {  
+    @media (max-width: 480px) {
+      flex-direction: column;
+      margin: 0;
+    }
+    .black {
       border-radius: 50%;
       padding: 30px;
       font-size: 1.2rem;
       color: #cacaca;
       border: 2px solid white;
-
-      &:first-child{
+      @media (max-width: 480px) {
+        margin: 30px;
+      }
+      &:first-child {
         background-color: white;
         color: #66bb6a;
       }
     }
     hr {
       width: 100%;
-      margin: 0;
+      margin: 0;color: white;
+      @media (max-width: 480px) {
+        transform: rotate(90deg);
+        width: 40px;
+        color: white;
+      }
     }
   }
-
 
   .bottom-text-row {
     display: flex;
     justify-content: center;
     padding-bottom: 100px;
+    @media (max-width: 480px) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
     h5 {
       max-width: 15%;
       text-align: left;
       font-size: 1.3rem;
       line-height: 2rem;
       margin-top: 50px;
+      @media (max-width: 480px) {
+        max-width: 100%;
+        text-align: center;
+        margin-bottom: 10px;
+        margin-top: 10px;
+      }
     }
 
     p {
@@ -550,6 +585,12 @@ hr {
       font-size: 1.1rem;
       color: white;
       margin-left: 40px;
+      @media (max-width: 480px) {
+        margin-left: 0;
+        max-width: 80%;
+        text-align: center;
+        margin-top: 20px;
+      }
     }
   }
 }
