--- a/styles.css
+++ b/styles.css
@@ -829,11 +829,17 @@ hr {
   line-height: 45px;
 }
 
+@media (max-width: 480px) {
+  .comments .row {
+    margin-left: 30px;
+  }
+}
+
 .testimonial .container {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 100px 192px  0 192px;
+  margin: 100px 192px 0 192px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -859,7 +865,7 @@ hr {
 .testimonial .container .test-card .identity img {
   height: 80px;
   width: 80px;
-  margin-right: 30px;
+  margin-right: 10px;
   -o-object-fit: cover;
      object-fit: cover;
   background-color: #324148;
@@ -872,10 +878,26 @@ hr {
 
 .testimonial .container .test-card .identity h4 {
   margin: 0px;
-  max-width: 250px;
+  width: 100%;
 }
 
 .testimonial .container .test-card .testimony {
   line-height: 1.5rem;
+}
+
+@media (max-width: 480px) {
+  .testimonial .container {
+    margin: 0;
+    width: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .testimonial .container .test-card {
+    width: auto;
+    height: auto;
+    margin: 10px;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
