--- a/styles.scss
+++ b/styles.scss
@@ -606,14 +606,19 @@ hr {
       line-height: 45px;
     }
   }
+  @media (max-width: 480px) {
+    .row {
+      margin-left: 30px;
+    }
+  }
 }
 
 .testimonial {
   .container {
     justify-content: space-between;
-    margin:100px 192px  0 192px ;
-    
-display: flex;
+    margin: 100px 192px 0 192px;
+
+    display: flex;
     .test-card {
       background-color: pink;
       width: 400px;
@@ -627,7 +632,7 @@ display: flex;
         img {
           height: 80px;
           width: 80px;
-          margin-right: 30px;
+          margin-right: 10px;
           object-fit: cover;
           background-color: #324148;
           border-radius: 50%;
@@ -637,14 +642,24 @@ display: flex;
         }
         h4 {
           margin: 0px;
-          max-width: 250px;
+          width: 100%;
         }
-
       }
       .testimony {
         line-height: 1.5rem;
       }
     }
-
+  }
+  @media (max-width: 480px) {
+    .container {
+      margin: 0;
+      width: auto;
+      flex-direction: column;
+      .test-card {
+        width: auto;
+        height: auto;
+        margin: 10px;
+      }
+    }
   }
 }
