--- a/styles.scss
+++ b/styles.scss
@@ -663,3 +663,53 @@ hr {
     }
   }
 }
+
+.future {
+  display: flex;
+  justify-content: center;
+  .card {
+    margin-top: 200px;
+    background-color: white;
+    width: fit-content;
+    padding: 77px 226px;
+    text-align: center;
+    box-shadow: -1px 25px 20px #f2f2f2;
+    border-radius: 5px;
+    b {
+      color: #66bb6a;
+    }
+
+    .cta {
+      filter: drop-shadow(0px 13px 20px rgba(118, 196, 125, 0.411204));
+      color: white;
+      font-size: 18px;
+      padding: 8px 25px;
+      background-color: #66bb6a;
+      border: none;
+      border-radius: 5px;
+      transition: ease-in 0.25s all;
+      &:hover {
+        transform: translateY(5px);
+      }
+    }
+  }
+}
+
+.shortcuts{
+  .row{
+    display: flex;
+    margin-top: 120px;
+    justify-content: center;
+
+    .company{
+      margin: 0 100px;
+    }
+    .invest-col{
+      margin: 0 100px;
+  
+    }
+    .legal{
+      margin: 0 100px;
+    }
+  }
+}
