(FEAT): Added the footer section

--- a/styles.css
+++ b/styles.css
@@ -966,4 +966,20 @@ hr {
 .shortcuts .row .legal {
   margin: 0 100px;
 }
+
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer a {
+  text-decoration: none;
+}
 /*# sourceMappingURL=styles.css.map */
