--- a/styles.scss
+++ b/styles.scss
@@ -713,3 +713,13 @@ hr {
     }
   }
 }
+
+footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  a{
+    text-decoration: none;
+  }
+}
