--- a/styles.scss
+++ b/styles.scss
@@ -620,8 +620,8 @@ hr {
 
     display: flex;
     .test-card {
-      background-color: pink;
       width: 400px;
+      box-shadow: -1px 13px 20px #F0F2F4;
       padding: 30px;
       border-radius: 5px;
       .identity {
