--- a/styles.scss
+++ b/styles.scss
@@ -693,12 +693,12 @@ hr {
       }
     }
   }
-  // @media (max-width: 480px) {
-  //   .card {
-  //     margin-top: 100px;
-  //     padding: 50px;
-  //   }
-  // }
+  @media (max-width: 480px) {
+    .card {
+      margin-top: 100px;
+      padding: 50px;
+    }
+  }
 }
 
 .shortcuts {
@@ -718,17 +718,7 @@ hr {
       margin: 0 100px;
     }
   }
-  // @media (max-width: 480px) {
-  //   .row{
-  //     flex-direction: column;
-  //   }
-  //   .company {
-  //     margin: 0;
-  //   }
-  //   .invest-col {
-  //     margin: 0;
-  //   }
-  // }
+
 }
 
 footer {
