(FEAT): Made the shortcuts section responsive

--- a/styles.css
+++ b/styles.css
@@ -976,6 +976,21 @@ hr {
   margin: 0 100px;
 }
 
+@media (max-width: 480px) {
+  .shortcuts .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .shortcuts .company {
+    margin: 0;
+  }
+  .shortcuts .invest-col {
+    margin: 0;
+  }
+}
+
 footer {
   display: -webkit-box;
   display: -ms-flexbox;
